--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -122,76 +122,69 @@
                                         <th scope="col">{{ item.user }}</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="py-3">
-                                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                            <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
-                                        </td>
-                                        <td class="py-3">
-                                            <p class="my-0">${{ item.product.price }}</p>
-                                        </td>
-                                    </tr>
-                                    <tr class="mb-5">
-                                        <td class="py-3 box">
-                                            <p class="mb-0">{{ item.review }}</p>
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td class="py-3">
+                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.product.price }}</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="py-3 box">
+                                        <p class="my-0">{{ item.review }}</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                   <td class="py-3">
+                                        <small>
+                                            <a href="{% url 'edit_review' item.id %}">Edit</a> |
+                                            <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
+                                        </small>
+                                    </td>
+                                </tr>
                             {% endfor %}
-                            {% if already_reviewed %}
-                            <tr>
-                                <td>
-                                    <p class="text-muted mb-5">Edit or delete your review from the review page.</p>
-                                </td>
-                                {% for item in review_items %}
-                                    {% if review_match|length > 0 %}
-                                        {% if review_match %}
-                                            <td class="py-3">
-                                                <small>
-                                                    {{ i }}
-                                                    <a href="{% url 'edit_review' item.id %}">Edit</a>
-                                                    <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
-                                                </small>
-                                            </td>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endfor %}
-                            </tr>
-                            {% endif %}
-                        </tbody>
-                    </table>
-                </div>
-            {% endif %}
-            {% if order_match %}
-            <div class="row">
-                <div class="col-12">
-                    <p class="text-muted">Please fill out the form below to submit your product review.</p>
-                    <form method="POST" class="form mb-2" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {% for field in form %}
-                            {% if field.name != 'image' %}
-                                {{ field | as_crispy_field }}
-                            {% else %}
-                                {{ field }}
-                            {% endif %}
-                        {% endfor %}
-                        <div class="text-right mb-5">
-                            <a class="btn btn-outline-black rounded-0" href="{% url 'product_detail' product.id %}">Cancel</a>
-                            <button class="btn btn-black rounded-0" type="submit">Add Review</button>
+                        </table>
+                    </div>
+                {% endif %}
+                {% if already_reviewed %}
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="text-muted mb-5">Please edit or delete to your change your previous review.</p>
                         </div>
-                    </form>
+                    </div>
+                {% endif %}
+                {% if order_match %}
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-muted">Please fill out the form below to submit your product review.</p>
+                        <form method="POST" class="form mb-2" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {% for field in form %}
+                                {% if field.name != 'image' %}
+                                    {{ field | as_crispy_field }}
+                                {% else %}
+                                    {{ field }}
+                                {% endif %}
+                            {% endfor %}
+                            <div class="text-right mb-5">
+                                <a class="btn btn-outline-black rounded-0" href="{% url 'product_detail' product.id %}">Cancel</a>
+                                <button class="btn btn-black rounded-0" type="submit">Add Review</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
-            {% endif %}
-            {% if ignore %}
-            <div class="row">
-                <div class="col-12">
-                    <p class="text-muted mb-5">There are currently no reviews of this product.</p>
+                {% endif %}
+                {% if ignore %}
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-muted mb-5">There are currently no reviews of this product.</p>
+                    </div>
                 </div>
+                {% endif %}
             </div>
-            {% endif %}
         </div>
-    </div>
 {% endblock %}
 
 {% block postloadjs %}
