--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -89,77 +89,54 @@
                 </div>
                 {% endif %}
             </div>
+        </div>
+        <div class="row">
             <div class="col-12">
                 <p><a class="text-muted" href="{% url 'wishlist' %}">My Wishlist</a></p>
                 {% if wishlist_items %}
+                <div class="d-block d-md-none">
+                    {% for item in wishlist_items %}
+                        <div class="row">
+                            <div class="col-12 col-sm-6 mb-2">
+                                {% include "profiles/w_product_image.html" %}
+                            </div>
+                            <div class="col-12 col-sm-6 mb-2">
+                                {% include "profiles/w_product_info.html" %}
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <p class="my-0">${{ item.price }}</p>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                {% include "profiles/w_quantity_form.html" %}
+                            </div>
+                        </div>
+                        <div class="row"><div class="col"><hr></div></div>
+                    {% endfor %}
+                </div>
                 {% for product in products %}
-                <div class="table-responsive">
+                <div class="table-responsive d-none d-md-block">
                     <table class="table table-sm table-borderless">
                         <thead>
                             <tr>
-                                <th scope="col"></th>
                                 <th scope="col">Product</th>
+                                <th scope="col"></th>
                                 <th scope="col">Price</th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td class="p-3 w-25">
-                                    {% if product.image %}
-                                    <a href="{% url 'product_detail' product.id %}">
-                                        <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                    </a>
-                                    {% else %}
-                                    <a href="{% url 'product_detail' product.id %}">
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                    </a>
-                                    {% endif %}
+                                    {% include "profiles/w_product_image.html" %}
                                 </td>
-                                <td>
-                                    <p class="my-0"><strong>{{ product.name }}</strong></p>
-                                    <p class="my-0 small text-muted">SKU: {{ product.sku|upper }}</p>
+                                <td class="py-3">
+                                    {% include "profiles/w_product_info.html" %}
                                 </td>
-                                <td>
+                                <td class="py-3">
                                     <p class="my-0">${{ product.price }}</p>
                                 </td>
-                                <td>
-                                    <div class="col-12" style="padding-left: 0;">
-                                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                                            {% csrf_token %}
-                                            <div class="form-row">
-                                                <div class="col-6">
-                                                    <div class="form-group w-10">
-                                                        <div class="input-group">
-                                                            <div class="input-group-prepend">
-                                                                <button class="decrement-qty btn btn-black rounded-0"
-                                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                                    <span class="icon">
-                                                                        <i class="fas fa-minus"></i>
-                                                                    </span>
-                                                                </button>
-                                                            </div>
-                                                            <input class="form-control qty_input" type="number"
-                                                                name="quantity" value="1" min="1" max="99"
-                                                                data-item_id="{{ product.id }}"
-                                                                id="id_qty_{{ product.id }}">
-                                                            <div class="input-group-append">
-                                                                <button class="increment-qty btn btn-black rounded-0" 
-                                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                                    <span class="icon">
-                                                                        <i class="fas fa-plus"></i>
-                                                                    </span>
-                                                                </button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-6">
-                                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
-                                                </div>
-                                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                            </div>
-                                        </form>
-                                    </div>
+                                <td class="py-3 w-40">
+                                    {% include "profiles/w_quantity_form.html" %}
                                 </td>
                             </tr>
                             {% endfor %}
@@ -178,48 +155,60 @@
                 </div>
                 {% endif %}
             </div>
-            <div class="col-12">
+        </div>
+        <div class="row">
+            <div class="col">
                 <p><a class="text-muted" href="{% url 'reviews' %}">My Reviews</a></p>
                 {% if review_items %}
-                <div class="table-responsive">
+                <div class="d-block d-md-none">
+                        {% for item in review_items %}
+                        <div class="row">
+                            <div class="col-12 col-sm-6 mb-2">
+                                {% include "profiles/r_product_image.html" %}
+                            </div>
+                            <div class="col-12 col-sm-6 mb-2">
+                                {% include "profiles/r_product_info.html" %}
+                            </div>
+                            <div class="col-12 col-sm-6 mb-2">
+                                <p class="my-0">${{ item.product.price }}</p>
+                            </div>
+                            <div class="col-12 mb-2">
+                                {% include "profiles/r_review_content.html" %}
+                            </div>
+                            <div class="col-12 mb-2">
+                                {% include "profiles/r_edit_and_delete.html" %}
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                <div class="table-responsive rounded d-none d-md-block">
                     <table class="table table-sm table-borderless">
-                        <thead>
+                        <thead class="text-black">
                             <tr>
-                                <th scope="col"></th>
                                 <th scope="col">Product</th>
+                                <th scope="col"></th>
                                 <th scope="col">Price</th>
                                 <th scope="col">Review</th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for item in review_items %}
                             <tr>
                                 <td class="p-3 w-25">
-                                    {% if item.product.image %}
-                                    <a href="{% url 'product_detail' item.product.id %}">
-                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                                    </a>
-                                        {% else %}
-                                    <a href="{% url 'product_detail' item.product.id %}">
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                    </a>
-                                    {% endif %}
+                                    {% include "profiles/r_product_image.html" %}
                                 </td>
                                 <td>
-                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                    <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                    {% include "profiles/r_product_info.html" %}
                                 </td>
                                 <td>
                                     <p class="my-0">${{ item.product.price }}</p>
                                 </td>
                                 <td>
-                                    <p class="my-0">{{ item.review }}</p>
+                                    {% include "profiles/r_review_content.html" %}
                                 </td>
                                 <td>
-                                    <small class="ml-3">
-                                        <a href="{% url 'edit_review' item.id %}">Edit</a>
-                                        <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
-                                    </small>
+                                    {% include "profiles/r_edit_and_delete.html" %}
                                 </td>
                             </tr>
                         {% endfor %}
