--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -136,14 +136,6 @@
                                         <p class="my-0">{{ item.review }}</p>
                                     </td>
                                 </tr>
-                                <tr>
-                                   <td class="py-3">
-                                        <small>
-                                            <a href="{% url 'edit_review' item.id %}">Edit</a> |
-                                            <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
-                                        </small>
-                                    </td>
-                                </tr>
                             {% endfor %}
                         </table>
                     </div>
@@ -151,7 +143,7 @@
                 {% if already_reviewed %}
                     <div class="row">
                         <div class="col-12">
-                            <p class="text-muted mb-5">Please edit or delete to your change your previous review.</p>
+                            <p class="text-muted mb-5">Please edit or delete to your change your previous review from your review page.</p>
                         </div>
                     </div>
                 {% endif %}
@@ -176,7 +168,7 @@
                     </div>
                 </div>
                 {% endif %}
-                {% if ignore %}
+                {% if no_reviews %}
                 <div class="row">
                     <div class="col-12">
                         <p class="text-muted mb-5">There are currently no reviews of this product.</p>
