added condition for logged in users on profile page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -132,7 +132,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="py-3 box">
+                                    <td class="py-3 box mb-5">
                                         <p class="my-0">{{ item.review }}</p>
                                     </td>
                                 </tr>
