--- a/profiles/templates/profiles/r_edit_and_delete.html
+++ b/profiles/templates/profiles/r_edit_and_delete.html
@@ -1,4 +1,4 @@
 <small>
-    <a href="{% url 'edit_review' item.id %}">Edit</a>
+    <a href="{% url 'edit_review' item.id %}">Edit</a> |
     <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
 </small>
