--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -141,9 +141,11 @@
                     </div>
                 {% endif %}
                 {% if already_reviewed %}
-                    <div class="row">
+                    <div class="row mb-5">
                         <div class="col-12">
-                            <p class="text-muted mb-5">Please edit or delete to your change your previous review from your review page.</p>
+                            {% if review_items %}
+                                {% include "products/p_edit_and_delete.html" %}
+                            {% endif %}
                         </div>
                     </div>
                 {% endif %}
@@ -172,6 +174,7 @@
                 <div class="row">
                     <div class="col-12">
                         <p class="text-muted mb-5">There are currently no reviews of this product.</p>
+                        <hr>
                     </div>
                 </div>
                 {% endif %}
