--- a/wishlist/templates/wishlist/quantity_form.html
+++ b/wishlist/templates/wishlist/quantity_form.html
@@ -2,7 +2,7 @@
 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
     {% csrf_token %}
     <div class="form-row">
-        <div class="col-6">
+        <div class="col-6 col-md-12">
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -28,8 +28,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
-            <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
+        <div class="col-6 col-md-12">
+            <input type="submit" class="btn btn-black rounded-0 text-uppercase float-right" value="Add to Bag">
         </div>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
     </div>
