--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -25,7 +25,7 @@
         <div class="col">
             {% if wishlist_items %}
             <div class="d-block d-md-none">
-                {% for item in wishlist_items %}
+                {% for product in products %}
                     <div class="row">
                         <div class="col-12 col-sm-6 mb-2">
                             {% include "wishlist/product_image.html" %}
