--- a/profiles/templates/profiles/w_delete.html
+++ b/profiles/templates/profiles/w_delete.html
@@ -1,3 +1,3 @@
 <small>
-    <a class="text-danger" href="{% url 'delete_wishlist_confirmation' item.id %}">Delete</a>
+    <a class="text-danger" href="{% url 'delete_wishlist_confirmation' product.id %}">Delete</a>
 </small>
