--- a/wishlist/templates/wishlist/quantity_form.html
+++ b/wishlist/templates/wishlist/quantity_form.html
@@ -1,8 +1,7 @@
-{% for product in products %}
 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
     {% csrf_token %}
     <div class="form-row">
-        <div class="col-6 col-md-12">
+        <div class="col-12 col-lg-6">
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -28,10 +27,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-6 col-md-12">
+        <div class="col-12 col-lg-6">
             <input type="submit" class="btn btn-black rounded-0 text-uppercase float-right" value="Add to Bag">
         </div>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
     </div>
 </form>
-{% endfor %}
