--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -91,7 +91,7 @@
                                             <form class="form" action="{% url 'add_to_wishlist' product.id %}" method="POST">
                                                 {% csrf_token %}
                                                 <small>
-                                                    <span class="icon"><i class="fa-regular fa-heart"></i>Add to Wishlist</span>
+                                                    <span class="icon"><i class="fa-regular fa-heart"></i></span>
                                                     <input type="submit" class="btn-wishlist" value="Add to Wishlist" data-item_id="{{ product.id }}" id="{{ product.id }}">
                                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                                 </small>
