--- a/profiles/templates/profiles/w_quantity_form.html
+++ b/profiles/templates/profiles/w_quantity_form.html
@@ -1,7 +1,7 @@
 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
     {% csrf_token %}
     <div class="form-row">
-        <div class="col-6 col-md-12 col-lg-6">
+        <div class="col-12 col-xl-6">
             <div class="form-group w-10">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6 col-md-12 col-lg-6">
+        <div class="col-12 col-xl-6">
             <input type="submit" class="btn btn-black rounded-0 text-uppercase float-right" value="Add to Bag">
         </div>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
