readme. to add more regarding data schema, and check why gitpod not showing all products and bug regarding order existing but form not coming up

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -38,7 +38,7 @@
                 </div> 
                 {% if orders %}      
                 {% for order in orders %}         
-                <div class="order-history table-responsive">
+                <div class="order-history table-responsive  no-scroll">
                     <table class="table table-sm table-borderless">
                         <thead>
                             <tr>
@@ -118,7 +118,7 @@
                     </div>
                     {% endfor %}
             </div>
-            <div class="table-responsive rounded d-none d-md-block">
+            <div class="table-responsive rounded d-none d-md-block no-scroll">
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
                         <tr>
@@ -190,7 +190,7 @@
                     </div>
                     {% endfor %}
             </div>
-            <div class="table-responsive rounded d-none d-md-block">
+            <div class="table-responsive rounded d-none d-md-block no-scroll">
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
                         <tr>
